Add new card and add localStore functionality

--- a/Proect.html
+++ b/Proect.html
@@ -4,9 +4,16 @@
     
     <link rel="stylesheet" href="project.css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-    <title>Flex</title>
+    <title>Project</title>
     </head>
     <body>
+        <!-- <div class="card">
+            <div class="text-title">
+    <input type="text" minlength="2" maxlength="50" pattern="Simple note" required value="Simple Note">
+</div>
+</div> -->
+    <!-- <div class="card">
+    <textarea class="card-title" minlength="1" maxlength="50" >Simple note</textarea></div> -->
     <div class="search-box">
     <input type="text" class="search-txt" placeholder="Search">
         <a href="" class="search-btn"><i class="fa fa-search" aria-hidden="true"></i></a>
@@ -37,90 +44,13 @@
                 Publish: June 26th, 2021
             </span>
             </div>
-            </div>
-                <div href="#" class="card">
-                        <span class="card-title">
-                            <h3>Post title</h3> <button class="but"><i class="fa fa-eye" aria-hidden="true"></i></button><button class="but"><i class="fa fa-pencil" aria-hidden="true"></i></button><button class="but"><i class="fa fa-trash" aria-hidden="true"></i></button> 
-                        </span>
-                    <span class="card-summary">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis saepe ex officia consequuntur, amet odit.    
-                    </span>
-                    <span class="card-meta">
-                        Publish: June 26th, 2021
-                    </span>
-                </div>
-                <div href="#" class="card">
-                        <span class="card-title">
-                            <h3>Post title</h3> <button class="but"><i class="fa fa-eye" aria-hidden="true"></i></button><button class="but"><i class="fa fa-pencil" aria-hidden="true"></i></button><button class="but"><i class="fa fa-trash" aria-hidden="true"></i></button> 
-                        </span>
-                    <span class="card-summary">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis saepe ex officia consequuntur, amet odit.    
-                    </span>
-                    <span class="card-meta">
-                        Publish: June 26th, 2021
-                    </span>
-                </div>
-                <div href="#" class="card">
-                        <span class="card-title">
-                            <h3>Post title</h3> <button class="but"><i class="fa fa-eye" aria-hidden="true"></i></button><button class="but"><i class="fa fa-pencil" aria-hidden="true"></i></button><button class="but"><i class="fa fa-trash" aria-hidden="true"></i></button> 
-                        </span>
-                    <span class="card-summary">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis saepe ex officia consequuntur, amet odit.    
-                    </span>
-                    <span class="card-meta">
-                        Publish: June 26th, 2021
-                    </span>
-                </div>
-                <div href="#" class="card">
-                        <span class="card-title">
-                            <h3>Post title</h3> <button class="but"><i class="fa fa-eye" aria-hidden="true"></i></button><button class="but"><i class="fa fa-pencil" aria-hidden="true"></i></button><button class="but"><i class="fa fa-trash" aria-hidden="true"></i></button> 
-                        </span>
-                    <span class="card-summary">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis saepe ex officia consequuntur, amet odit.    
-                    </span>
-                    <span class="card-meta">
-                        Publish: June 26th, 2021
-                    </span>
-                </div>
-                <div href="#" class="card">
-                        <span class="card-title">
-                            <h3>Post title</h3> <button class="but"><i class="fa fa-eye" aria-hidden="true"></i></button><button class="but"><i class="fa fa-pencil" aria-hidden="true"></i></button><button class="but"><i class="fa fa-trash" aria-hidden="true"></i></button> 
-                        </span>
-                    <span class="card-summary">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis saepe ex officia consequuntur, amet odit.    
-                    </span>
-                    <span class="card-meta">
-                        Publish: June 26th, 2021
-                    </span>
-                </div>
-                <div href="#" class="card">
-                    <span class="card-title">
-                        <h3>Post title</h3> <button class="but"><i class="fa fa-eye" aria-hidden="true"></i></button><button class="but"><i class="fa fa-pencil" aria-hidden="true"></i></button><button class="but"><i class="fa fa-trash" aria-hidden="true"></i></button> 
-                    </span>
-                <span class="card-summary">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis saepe ex officia consequuntur, amet odit.    
-                </span>
-                <span class="card-meta">
-                    Publish: June 26th, 2021
-                </span>
-            </div>
-            <div class="card">
-                <span class="card-title">
-                    <h3>Post title</h3> <button class="but"><i class="fa fa-eye" aria-hidden="true"></i></button><button class="but"><i class="fa fa-pencil" aria-hidden="true"></i></button><button class="but"><i class="fa fa-trash" aria-hidden="true"></i></button> 
-                </span>
-             <span class="card-summary">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis saepe ex officia consequuntur, amet odit.    
-             </span>
-             <span class="card-meta">
-                Publish: June 26th, 2021
-             </span>
-            </div> -->
+            </div>/-->
+
             <div class="card1">
-                <button class="cardPlus" value="add" onclick="test()"><i class="fa fa-plus-square-o" aria-hidden="true"></i></button>
+                <button class="cardPlus" value="add" >ADD NOTES</button>
             </div>
-            </div>
+        </div>
     </div>
-<!--        <textarea class="arabi"></textarea>-->
     <script src="Project.js"></script>
 </body>
 </html>
