#33701 Editing a note, making and saving changes

--- a/Proect.html
+++ b/Proect.html
@@ -4,9 +4,16 @@
     
     <link rel="stylesheet" href="project.css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-    <title>Notebook</title>
+    <title>Project</title>
     </head>
     <body>
+        <!-- <div class="card">
+            <div class="text-title">
+    <input type="text" minlength="2" maxlength="50" pattern="Simple note" required value="Simple Note">
+</div>
+</div> -->
+    <!-- <div class="card">
+    <textarea class="card-title" minlength="1" maxlength="50" >Simple note</textarea></div> -->
     <div class="search-box">
     <input type="text" class="search-txt" placeholder="Search">
         <a href="" class="search-btn"><i class="fa fa-search" aria-hidden="true"></i></a>
@@ -40,10 +47,10 @@
             </div>/-->
 
             <div class="card1">
-                <button class="cardPlus" value="add" ><i class="fa fa-plus-circle" aria-hidden="true"></i></button>
+                <button class="cardPlus" value="add" >ADD NOTES</button>
             </div>
         </div>
     </div>
-    <script src="js/main.js"></script>
+    <script src="Project.js"></script>
 </body>
 </html>
