Сorrect files and #33701 Editing a note, making and saving changes,  #33702 Delete notes, Fix Bug #33871 and Bug #33872

--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
+    <link rel="shortcut icon" href="photo_2021-09-23_12-02-47.jpg">
     <link rel="stylesheet" href="project.css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-    <title>Project</title>
+    <title>Notebook</title>
     </head>
     <body>
-        <!-- <div class="card">
-            <div class="text-title">
-    <input type="text" minlength="2" maxlength="50" pattern="Simple note" required value="Simple Note">
-</div>
-</div> -->
-    <!-- <div class="card">
-    <textarea class="card-title" minlength="1" maxlength="50" >Simple note</textarea></div> -->
     <div class="search-box">
     <input type="text" class="search-txt" placeholder="Search">
         <a href="" class="search-btn"><i class="fa fa-search" aria-hidden="true"></i></a>
@@ -47,10 +40,10 @@
             </div>/-->
 
             <div class="card1">
-                <button class="cardPlus" value="add" >ADD NOTES</button>
+                <button class="cardPlus" value="add" >&#43;</button>
             </div>
         </div>
     </div>
-    <script src="Project.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
